Fix issue with margin of last child on mobile

--- a/src/components/MortgageDetailsDisplay.scss
+++ b/src/components/MortgageDetailsDisplay.scss
@@ -6,9 +6,12 @@
         flex: 1;
         min-width: 200px;
         margin-left: 8px;
-
-        &:last-child {
-            margin-left: 0;
+    
+        // When the the info lines wrap, this doesn't look good
+        @media (min-width:856px) {
+            &:last-child {
+                margin-left: 0;
+            }
         }
     }
 }
